gnome-shell/gnome-shell.css
/* COURTESY  OF  PROJECT-PANACEA  */

/* GNOME Shell theme Os-P.Mist  designed by Astral-1 http://Astral-1.deviantart.com/ */

@import url("extensions/dash-dock/dash-dock.css");
@import url("extensions/weather/weather.css");
@import url("extensions/window-overlay/window-overlay.css");
@import url("extensions/workspace-dock/workspaces-to-dock.css");

/* Text Styles */

/* default text style */
stage {
    font-family: Liberation Sans, sans-serif;
    font-size: 10pt;
   color: rgba(82,79,72,0.5);
}

/* links */
.shell-link {
    color: #B3DAFF;
    text-decoration: underline;
}

.shell-link:hover {
    color: #8AADD4;
}

/* small */
.app-well-menu,
.run-dialog-error-label {
    font-size: 10pt;
}

/* small bold */
.dash-label,
.window-caption,
.switcher-list, 
.modal-dialog-button,
.app-well-app > .overview-icon,
.show-apps > .overview-icon,
.grid-search-result .overview-icon {
    font-size: 10pt;
    font-weight: normal;
}

/* Scroll Bars */

StScrollBar {
    width: 14px;
}

StScrollView.vfade {
    -st-vfade-offset: 48px;
}

StScrollView.hfade {
    -st-hfade-offset: 48px;
}

StScrollView StScrollBar {
    width: 14px;
    min-height: 14px;
}

StScrollBar StBin#trough {
    border-image: url("inset-panel-natural.png") 6 6 6 6;
}

StScrollBar StButton#vhandle {
    border-image: url("bar-scroll.png")  6 6 6 6;
}

StScrollBar StButton#hhandle {
    border-image: url("bar-scroll-hrz.png")  6 6 6 6;
}

StScrollBar StButton#hhandle:hover {
    border-image: url("bar-scroll-hover-hrz.png")  6 6 6 6;
}
StScrollBar StButton#vhandle:hover {
    border-image: url("bar-scroll-hover.png")  6 6 6 6;
}

StScrollBar StButton#hhandle:active {
    border-image: url("bar-scroll-active-hrz.png")  6 6 6 6;
}
StScrollBar StButton#vhandle:active {
    border-image: url("bar-scroll-active.png")  6 6 6 6;
}

/* Check Boxes */

.check-box ShellGenericContainer {
    spacing: .8px;
}

.check-box StBin {
    width: 24px;
    height: 22px;
    background-image: url("checkbox-off.png");
}

.check-box:focus StBin {
    background-image: url("checkbox-off-focused.png");
}

.check-box:checked StBin {
    background-image: url("checkbox.png");
}

.check-box:focus:checked StBin {
    background-image: url("checkbox-focused.png");
}

/* PopupMenu */

.popup-menu-ornament {
    text-align: center;
}

.popup-menu-boxpointer,
.candidate-popup-boxpointer {
    -arrow-border-radius: 2px;
    -arrow-background-color: #EDF2F8;
    -arrow-border-width: 1px;
    -arrow-border-color: #BDBDBD;
    -arrow-base: 22px;
    -arrow-rise: 10px;
}

.popup-menu {
    color:   rgba(82,79,72,0.5);
    min-width: 84px;
}

.popup-submenu-menu-item:open {
    border-image: url("hover.png") 6 12 6 12;
    color: rgba(255,255,255,1.0);
}

.popup-sub-menu {
    border-image: url("inset-panel.png") 12 12 12 12;
}

.popup-sub-menu:scrolled .popup-menu-item:ltr {
    padding-right: 0em;
}

.popup-sub-menu:scrolled .popup-menu-item:rtl {
    padding-left: 0em;
}

.popup-sub-menu StScrollBar {
    padding: 4px;
}

.popup-sub-menu StScrollBar StBin#trough {
    border-width: 0px;
}

.popup-sub-menu StScrollBar StBin#vhandle {
    border-image: url("bar-scroll-active.png")  6 6 6 6;
}

.popup-combo-menu {
    border-image: url("inset-panel.png") 12 12 12 12;
}

/* The remaining popup-menu sizing is all done in ems, so that if you
 * override .popup-menu.font-size, everything else will scale with it.
 */

.popup-menu-content {
    border-image: url("popup-panel.png") 12 12 12 12;
    padding: 10px;
}

.popup-menu-item {
    padding: 5px 8px 6px 8px;
    spacing: 10px;
}

.popup-menu-item:hover {
    border-image: url("inset-panel.png") 6 16 6 16;
    color: rgba(82,79,72,0.5);
}

.popup-menu-item:active {
    border-image: url("hover.png") 6 16 6 16;
    color: rgba(255,255,255,1.0);
}

.popup-menu-item:insensitive {
    color: #9f9f9f;
}

.popup-image-menu-item {
}

.popup-combobox-item {
    spacing: 0px;
}

.popup-separator-menu-item {
    border-image: url("separator.png");
    -margin-horizontal: 20px;
    height: 2px;
}

.popup-alternating-menu-item:alternate {
    font-weight: normal;
}

.popup-slider-menu-item {
    color: rgba(82,79,72,0.5);
    height: 16px;
    min-width: 150px;
    -slider-height: 5px;
    -slider-background-color: rgba(255,255,255,0.7);
    -slider-border-color: #8aadd4;
    -slider-active-background-color: #B3DAFF;
    -slider-active-border-color: #8aadd4;
    -slider-border-width: 1px;
    -slider-handle-radius: 15px;
}

.popup-device-menu-item {
    spacing: 5px;
}

.popup-status-menu-item {
    font-weight: normal;
      color: rgba(82,79,72,0.5);
}

.popup-inactive-menu-item, .popup-inactive-menu-item:insensitive {
      color: rgba(82,79,72,0.5);
}

.popup-subtitle-menu-item, .popup-subtitle-menu-item:insensitive {
    font-weight: normal;
      color: rgba(82,79,72,0.5);
}

.popup-menu-icon {
    icon-size: 16px;
}

.popup-battery-percentage {
    padding-left: 24px;
}

/* Switches */

.toggle-switch {
    width: 50px;
    height: 12px;
}

.toggle-switch-us {
    background-image: url("toggle-off-us.png");
    background-size: contain;
}
.toggle-switch-us:checked {
    background-image: url("toggle-on-us.png");
    background-size: contain;
}

.toggle-switch-intl {
    background-image: url("toggle-off-intl.png");
    background-size: contain;
}
.toggle-switch-intl:checked {
    background-image: url("toggle-on-intl.png");
    background-size: contain;
}

.nm-menu-item-icons {
    spacing: 5px;
}

/* Buttons */

.candidate-page-button,
.notification-button,
.notification-icon-button,
.hotplug-notification-item,
.hotplug-resident-eject-button,
.modal-dialog-button {
    border-image: url("b-panel.png") 12 12 12 12;
}

.app-view-control {
    /*border-image: url("b-panel.png") 12 12 12 12;*/
}

.modal-dialog-button {
    /*font-weight: bold;*/
}
/* ... */

